{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 471,
  "lineage": "8d578b85-1ed8-acc7-1d25-f844bd82744b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "raise_tech_ec2_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0af1df87db7b650f4",
            "arn": "arn:aws:ec2:ap-northeast-1:315826383203:instance/i-0f83d9c37ea49bc16",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "RaiseTechInstanceProfile",
            "id": "i-0f83d9c37ea49bc16",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kawakami",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0faf275de8209a7f2",
            "private_dns": "ip-10-0-1-234.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.234",
            "public_ip": "13.231.227.230",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-042cc477a890f6ec4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f57ffeaa1b1603cd",
            "tags": {
              "Name": "RaiseTechEC21a"
            },
            "tags_all": {
              "Name": "RaiseTechEC21a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05567f17587cda579"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.iam_instance_profile",
            "aws_iam_role.root_role",
            "aws_security_group.security_group_alb",
            "aws_security_group.security_group_ec2",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "raise_tech_ec2_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0af1df87db7b650f4",
            "arn": "arn:aws:ec2:ap-northeast-1:315826383203:instance/i-03b727806c7aba000",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "RaiseTechInstanceProfile",
            "id": "i-03b727806c7aba000",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kawakami",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0818b658aa7925f36",
            "private_dns": "ip-10-0-3-115.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.115",
            "public_ip": "35.78.79.87",
            "region": "ap-northeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0de20008f86d13a8e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b829e438868eb4d",
            "tags": {
              "Name": "RaiseTechEC21c"
            },
            "tags_all": {
              "Name": "RaiseTechEC21c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05567f17587cda579"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.iam_instance_profile",
            "aws_iam_role.root_role",
            "aws_security_group.security_group_alb",
            "aws_security_group.security_group_ec2",
            "aws_subnet.public_subnet_1c",
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:315826383203:internet-gateway/igw-09af9e72224710eeb",
            "id": "igw-09af9e72224710eeb",
            "owner_id": "315826383203",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "InternetGateway"
            },
            "tags_all": {
              "Name": "InternetGateway"
            },
            "vpc_id": "vpc-0e8e6a920d8d26348"
          },
          "dependencies": [
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "raise_tech_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:315826383203:loadbalancer/app/RaiseTechALB/084564c67bda1a06",
            "arn_suffix": "app/RaiseTechALB/084564c67bda1a06",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "RaiseTechALB-888793658.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:315826383203:loadbalancer/app/RaiseTechALB/084564c67bda1a06",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "RaiseTechALB",
            "preserve_host_header": false,
            "region": "ap-northeast-1",
            "security_groups": [
              "sg-0b11b40d88c41ca9d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09b829e438868eb4d"
              },
              {
                "subnet_id": "subnet-0f57ffeaa1b1603cd"
              }
            ],
            "subnets": [
              "subnet-09b829e438868eb4d",
              "subnet-0f57ffeaa1b1603cd"
            ],
            "tags": {
              "Name": "RaiseTechALB"
            },
            "tags_all": {
              "Name": "RaiseTechALB"
            },
            "vpc_id": "vpc-0e8e6a920d8d26348",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.security_group_alb",
            "aws_subnet.public_subnet_1a",
            "aws_subnet.public_subnet_1c",
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:315826383203:listener/app/RaiseTechALB/084564c67bda1a06/772da054635da557",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:315826383203:targetgroup/ALBTargetGroup/5cfe15e1445c6177",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:315826383203:listener/app/RaiseTechALB/084564c67bda1a06/772da054635da557",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:315826383203:loadbalancer/app/RaiseTechALB/084564c67bda1a06",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.raise_tech_alb",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.security_group_alb",
            "aws_subnet.public_subnet_1a",
            "aws_subnet.public_subnet_1c",
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:315826383203:targetgroup/ALBTargetGroup/5cfe15e1445c6177",
            "arn_suffix": "targetgroup/ALBTargetGroup/5cfe15e1445c6177",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:315826383203:targetgroup/ALBTargetGroup/5cfe15e1445c6177",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALBTargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e8e6a920d8d26348"
          },
          "dependencies": [
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_1a_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:315826383203:targetgroup/ALBTargetGroup/5cfe15e1445c6177-20250627115116087000000009",
            "port": 80,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:315826383203:targetgroup/ALBTargetGroup/5cfe15e1445c6177",
            "target_id": "i-0f83d9c37ea49bc16"
          },
          "dependencies": [
            "aws_iam_instance_profile.iam_instance_profile",
            "aws_iam_role.root_role",
            "aws_instance.raise_tech_ec2_1a",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.security_group_alb",
            "aws_security_group.security_group_ec2",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_1c_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:315826383203:targetgroup/ALBTargetGroup/5cfe15e1445c6177-2025062711512271360000000a",
            "port": 80,
            "region": "ap-northeast-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:315826383203:targetgroup/ALBTargetGroup/5cfe15e1445c6177",
            "target_id": "i-03b727806c7aba000"
          },
          "dependencies": [
            "aws_iam_instance_profile.iam_instance_profile",
            "aws_iam_role.root_role",
            "aws_instance.raise_tech_ec2_1c",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.security_group_alb",
            "aws_security_group.security_group_ec2",
            "aws_subnet.public_subnet_1c",
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09af9e72224710eeb",
            "id": "r-rtb-03c433781e85822481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-03c433781e8582248",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route_table",
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:315826383203:route-table/rtb-0b68cedcc11cca99c",
            "id": "rtb-0b68cedcc11cca99c",
            "owner_id": "315826383203",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "PrivateRouteTable"
            },
            "tags_all": {
              "Name": "PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8e6a920d8d26348"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:315826383203:route-table/rtb-03c433781e8582248",
            "id": "rtb-03c433781e8582248",
            "owner_id": "315826383203",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8e6a920d8d26348"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f676eac8e3d7026a",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0b68cedcc11cca99c",
            "subnet_id": "subnet-0d5ff8eb963212194"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1a",
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095ed28126b30fd97",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0b68cedcc11cca99c",
            "subnet_id": "subnet-032c2a80a276fd88d"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1c",
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6abb972955e91c6",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-03c433781e8582248",
            "subnet_id": "subnet-0f57ffeaa1b1603cd"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0503b4b51b7957553",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-03c433781e8582248",
            "subnet_id": "subnet-09b829e438868eb4d"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1c",
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:315826383203:security-group/sg-0b11b40d88c41ca9d",
            "description": "SecurityGroupALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b11b40d88c41ca9d",
            "ingress": [
              {
                "cidr_blocks": [
                  "14.10.3.225/32"
                ],
                "description": "Allow HTTP from specified IP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SecurityGroupALB",
            "name_prefix": "",
            "owner_id": "315826383203",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SecurityGroupALB"
            },
            "tags_all": {
              "Name": "SecurityGroupALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8e6a920d8d26348"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:315826383203:security-group/sg-05567f17587cda579",
            "description": "SecurityGroupEC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05567f17587cda579",
            "ingress": [
              {
                "cidr_blocks": [
                  "14.10.3.225/32"
                ],
                "description": "Allow SSH from specified IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b11b40d88c41ca9d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SecurityGroupEC2",
            "name_prefix": "",
            "owner_id": "315826383203",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SecurityGroupEC2"
            },
            "tags_all": {
              "Name": "SecurityGroupEC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8e6a920d8d26348"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_alb",
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:315826383203:security-group/sg-0ff3d25dc96f36667",
            "description": "SecurityGroupRDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff3d25dc96f36667",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL from EC2 instances",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05567f17587cda579"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SecurityGroupRDS",
            "name_prefix": "",
            "owner_id": "315826383203",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SecurityGroupRDS"
            },
            "tags_all": {
              "Name": "SecurityGroupRDS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8e6a920d8d26348"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.security_group_alb",
            "aws_security_group.security_group_ec2",
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:315826383203:subnet/subnet-0d5ff8eb963212194",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5ff8eb963212194",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "315826383203",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "PrivateSubnet-1a"
            },
            "tags_all": {
              "Name": "PrivateSubnet-1a"
            },
            "vpc_id": "vpc-0e8e6a920d8d26348"
          },
          "dependencies": [
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:315826383203:subnet/subnet-032c2a80a276fd88d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032c2a80a276fd88d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "315826383203",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "PrivateSubnet-1c"
            },
            "tags_all": {
              "Name": "PrivateSubnet-1c"
            },
            "vpc_id": "vpc-0e8e6a920d8d26348"
          },
          "dependencies": [
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:315826383203:subnet/subnet-0f57ffeaa1b1603cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f57ffeaa1b1603cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "315826383203",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "PublicSubnet-1a"
            },
            "tags_all": {
              "Name": "PublicSubnet-1a"
            },
            "vpc_id": "vpc-0e8e6a920d8d26348"
          },
          "dependencies": [
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:315826383203:subnet/subnet-09b829e438868eb4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b829e438868eb4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "315826383203",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "PublicSubnet-1c"
            },
            "tags_all": {
              "Name": "PublicSubnet-1c"
            },
            "vpc_id": "vpc-0e8e6a920d8d26348"
          },
          "dependencies": [
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "RaiseTech_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:315826383203:vpc/vpc-0e8e6a920d8d26348",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0047d80a812888138",
            "default_route_table_id": "rtb-0546e5942c2ab8d68",
            "default_security_group_id": "sg-094e4d38ca268ee67",
            "dhcp_options_id": "dopt-0a42b02babde132a5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e8e6a920d8d26348",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0546e5942c2ab8d68",
            "owner_id": "315826383203",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "RaiseTech_VPC"
            },
            "tags_all": {
              "Name": "RaiseTech_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_gateway_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:315826383203:vpc-endpoint/vpce-058b8fe88ba9f58f7",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.20.0/24",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "id": "vpce-058b8fe88ba9f58f7",
            "owner_id": "315826383203",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "region": "ap-northeast-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0b68cedcc11cca99c"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "service_region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "S3GatewayEndpoint"
            },
            "tags_all": {
              "Name": "S3GatewayEndpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0e8e6a920d8d26348"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_vpc.RaiseTech_vpc"
          ]
        }
      ]
    }
  ]
}